# notebookllm

./: Makefile  README.md  TESTING.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: models.py
app/services/: document_service.py  notebook_service.py  parser_service.py  rag_service.py  repository.py
docs/: api.md  architecture.md
fastapi/: __init__.py  testclient.py
pydantic/: __init__.py
scripts/: smoke_test.sh
tests/: test_api_flow.py  test_health.py  test_parser_service.py  test_shims.py
